src/main/resources/static/css/panel.css
* {
    color: white;
    text-align: center;
}

html {
    background: black;
}

img {
    width: 100%;
}

input[type=number] {
    background-color: black;
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    margin: 0;
    width: 100%;
    border: solid gray 1px;
    font-size: large;
}

.row {
    margin: 0;
}

.pane-main {
    background-color: #1b1e21;
    border-radius: 15px;
    position: absolute;
    z-index: 1;
    text-align: center;
}

.pane-options {
    background-color: #4e555b;
    border: solid black 2px;
}

.pane-duration {
    border: solid black 2px;
    padding: 0;
}

.pane-mode {
    border: solid black 2px;
}

.list-vertical {
    background-color: #4e555b;
    border: solid black 2px;
}

.list-horizontal {
    background-color: #4e555b;
    border: solid black 2px;
    white-space: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
}

.button-ok {
    background-color: #28a745;
    border: solid black 2px;
    width: 10%;
}

.box {
    border: solid black 2px;
    padding: 0;
}

.custom-checkbox {
    min-height: 1rem;
    padding-left: 0;
    margin-right: 0;
    cursor: pointer;
}
.custom-checkbox .custom-control-indicator {
    content: "";
    display: inline-block;
    position: relative;
    width: 30px;
    height: 10px;
    background-color: #818181;
    border-radius: 15px;
    margin-right: 10px;
    -webkit-transition: background .3s ease;
    transition: background .3s ease;
    vertical-align: middle;
    margin: 0 16px;
    box-shadow: none;
}
.custom-checkbox .custom-control-indicator:after {
    content: "";
    position: absolute;
    display: inline-block;
    width: 18px;
    height: 18px;
    background-color: #f1f1f1;
    border-radius: 21px;
    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
    left: -2px;
    top: -4px;
    -webkit-transition: left .3s ease, background .3s ease, box-shadow .1s ease;
    transition: left .3s ease, background .3s ease, box-shadow .1s ease;
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
    background-color: #0e8b00;
    background-image: none;
    box-shadow: none !important;
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator:after {
    background-color: #0ead00;
    left: 15px;
}
.custom-checkbox .custom-control-input:focus ~ .custom-control-indicator {
    box-shadow: none !important;
}

.box img {
    width: 80%;
    height: 80%;
}

#addColor {
    width: 9%;
    margin: 5px;
    background-color: #3d4349;
    display: inline-block;
    float: none;
}

.color {
    margin: 5px;
    display: inline-block;
    float: none;
}

.remove {
    height: 30%;
    width: 30%;
    display: flex;
    float: right;
    align-content: flex-end;
}

.color-highlight {
    box-shadow: 0 0 5px 2px #007bff;
}

